--- a/src/app/Pages/adres-dostavki/adres-dostavki.component.html
+++ b/src/app/Pages/adres-dostavki/adres-dostavki.component.html
@@ -26,38 +26,43 @@
         <h1 style="font-weight: 700;font-size: 35px;">Оплата и доставка</h1>
 
         <label for="fio">ФИО*</label>
-        <input type="text" placeholder="ФИО" id="fio" [(ngModel)]="setValue.fullName">
+        <input type="text" placeholder="ФИО" id="fio" name="fio">
 
         <label for="email">E-mail*</label>
-        <input type="text" placeholder="E-mail" id="email" [(ngModel)]="setValue.email">
+        <input type="text" placeholder="E-mail" id="email" name="email">
 
         <div class="qator">
             <div class="qator-one">
                 <label for="select1">Страна/регион*</label>
-        <select  id="select1" [(ngModel)]="setValue.region">
+        <select name="select1" id="select1">
             <!--Supplement an id here instead of using 'name'-->
-            <option value="value1">Uzbelistan</option>
-            <option value="value2">Qozog'iston</option>
-            <option value="value3">Turkmanistan</option>
+            <option value="value1">Значение 1</option>
+            <option value="value2">Значение 2</option>
+            <option value="value3">Значение 3</option>
           </select>
             </div>
             <div class="qator-two">
                 <label for="oblasti">Область*</label>
-                <input type="text" placeholder="Область" id="oblasti" [(ngModel)]="setValue.city">
+                <input type="text" placeholder="Область" name="oblasti" id="oblasti">
             </div>
         </div>
 
         <label for="gorod">Город*</label>
-        <input type="text" placeholder="Город*" id="gorod" [(ngModel)]="setValue.country">
+        <input type="text" placeholder="Город*" name="gorod" id="gorod">
 
         <label for="index">Индекс*</label>
-        <input type="text" placeholder="Индекс*" id="index" [(ngModel)]="setValue.index">
+        <input type="text" placeholder="Индекс*" name="index" id="index">
 
         <label for="nomer">Улица, номер дома квартира</label>
-        <input type="text" placeholder="Улица, номер дома квартира" id="nomer" [(ngModel)]="setValue.streetHouse">
+        <input type="text" placeholder="Улица, номер дома квартира" name="nomer" id="nomer">
 
-        <label for="nomer">details</label>
-        <input type="text" placeholder= "details" id="details" [(ngModel)]="setValue.details">
+        <label for="select2">Страна/регион*</label>
+        <select name="select2" id="select2">
+            <!--Supplement an id here instead of using 'name'-->
+            <option value="value1">Значение 1</option>
+            <option value="value2">Значение 2</option>
+            <option value="value3">Значение 3</option>
+          </select>
 
         <h1 style="font-weight: 700;font-size: 35px;margin-top: 40px;">Оплата и доставка</h1>
         <label for="mess">Примечание (необязательно)</label>
@@ -98,7 +103,7 @@
                 <input type="checkbox">
                 <p style="margin-left: 10px;">Хочу подписаться на новости!</p>
             </div>
-            <button style="width: 100%;color: #fff;background: #BB9B75;padding: 15px;font-size: 17px;margin-top: 20px;" (click)="setDelevery()">Подтвердить заказ</button>
+            <button style="width: 100%;color: #fff;background: #BB9B75;padding: 15px;font-size: 17px;margin-top: 20px;">Подтвердить заказ</button>
         </div>
     </div>
 </div>
