--- a/src/app/Pages/novosti/novosti-one/novosti-one.component.html
+++ b/src/app/Pages/novosti/novosti-one/novosti-one.component.html
@@ -6,7 +6,7 @@
             <div class="boxes">
                 <div *ngFor="let card of cards" class="card">
                     <div class="img">
-                      <img [src]="'https://localhost:7245' + card.cardPhotoPath" alt="Null">
+                      <img style="width: 400px; height: 200px;" [src]="'https://localhost:7245' + card.cardPhotoPath" alt="Null">
                       <p>Без рубрики</p>
                     </div>
                     <h1 style="width: 100%;font-size: 18px;font-weight: 600;padding: 10px;">{{ card.title }}</h1>
